# fts_remote_console

./: .appveyor.yml  .travis.yml  README.md  appveyor.yml  readme.md
code/example_game/: example_game_main.cpp
code/lib_fts/: fts_fuzzy_match.h  fts_sleep.h  fts_timer.h
code/net/: net_utils.cpp  net_utils.h  protocol_message.cpp  protocol_message.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  udp_broadcast_receiver.cpp  udp_broadcast_receiver.h  udp_broadcaster.cpp  udp_broadcaster.h
code/protocol/: dummy.cpp  protocol.fbs  protocol_generated.h
code/remote_console/: console.cpp  console.h  game_browser.cpp  game_browser.h  game_info.cpp  game_info.h  high_dpi_handler.cpp  high_dpi_handler.h  imgui_ext.cpp  imgui_ext.h  remote_console_main.cpp  tab_bar.cpp  tab_bar.h
projects/: .gitattributes  .gitignore
projects/cmake/: CMakeLists.txt
projects/cmake/projects/example_game/: CMakeLists.txt
projects/cmake/projects/flatbuffers/: CMakeLists.txt
projects/cmake/projects/fts_remote_console/: CMakeLists.txt
projects/cmake/projects/glfw/: CMakeLists.txt
projects/cmake/projects/imgui/: CMakeLists.txt
projects/cmake/projects/net/: CMakeLists.txt
projects/cmake/projects/protocol/: CMakeLists.txt
projects/genie/: genie.lua  make_all.bat
projects/gmake/: Makefile
projects/gmake/projects/: example_game.make  flatbuffers.make  fts_remote_console.make  glfw.make  imgui.make  net.make  protocol.make  remote_console.make
projects/gmake_linux/projects/: example_game.make  flatbuffers.make  fts_remote_console.make  glfw.make  imgui.make  net.make  protocol.make
projects/gmake_macosx/projects/: example_game.make  flatbuffers.make  fts_remote_console.make  glfw.make  imgui.make  net.make  protocol.make
projects/p4/: .gitignore  fts_console_thirdparty_branchspec.txt  gen_poco_branch_paths.py  readme.md
projects/sublime/: fts_console.sublime-project  fts_console_nix.sublime-project
projects/vs2012/: fts_console.sln
projects/vs2012/projects/: example_game.vcxproj  flatbuffers.vcxproj  fts_remote_console.vcxproj  glfw.vcxproj  imgui.vcxproj  net.vcxproj  protocol.vcxproj
projects/vs2013/: fts_console.sln
projects/vs2013/projects/: example_game.vcxproj  flatbuffers.vcxproj  fts_remote_console.vcxproj  glfw.vcxproj  imgui.vcxproj  net.vcxproj  protocol.vcxproj
projects/vs2015/: fts_console.sln
projects/vs2015/projects/: example_game.vcxproj  flatbuffers.vcxproj  fts_remote_console.vcxproj  glfw.vcxproj  imgui.vcxproj  net.vcxproj  protocol.vcxproj
projects/vs2017/projects/: example_game.vcxproj  flatbuffers.vcxproj  fts_remote_console.vcxproj  glfw.vcxproj  imgui.vcxproj  net.vcxproj  protocol.vcxproj
projects/vs2019/: fts_console.sln
projects/vs2019/projects/: example_game.vcxproj  flatbuffers.vcxproj  fts_remote_console.vcxproj  glfw.vcxproj  imgui.vcxproj  net.vcxproj  protocol.vcxproj
projects/xcode4/fts_console.xcworkspace/: contents.xcworkspacedata
projects/xcode4/projects/example_game.xcodeproj/: project.pbxproj
projects/xcode4/projects/flatbuffers.xcodeproj/: project.pbxproj
projects/xcode4/projects/fts_remote_console.xcodeproj/: project.pbxproj
projects/xcode4/projects/glfw.xcodeproj/: project.pbxproj
projects/xcode4/projects/imgui.xcodeproj/: project.pbxproj
projects/xcode4/projects/net.xcodeproj/: project.pbxproj
projects/xcode4/projects/protocol.xcodeproj/: project.pbxproj
