cmake_minimum_required(VERSION 2.8.4)

project(net)
set(
source_list
  ../../../../code/net/net_utils.cpp
  ../../../../code/net/net_utils.h
  ../../../../code/net/protocol_message.cpp
  ../../../../code/net/protocol_message.h
  ../../../../code/net/tcp_client.cpp
  ../../../../code/net/tcp_client.h
  ../../../../code/net/tcp_server.cpp
  ../../../../code/net/tcp_server.h
  ../../../../code/net/udp_broadcast_receiver.cpp
  ../../../../code/net/udp_broadcast_receiver.h
  ../../../../code/net/udp_broadcaster.cpp
  ../../../../code/net/udp_broadcaster.h
  ../../../../code/thirdparty/asio/asio/async_result.hpp
  ../../../../code/thirdparty/asio/asio/basic_datagram_socket.hpp
  ../../../../code/thirdparty/asio/asio/basic_deadline_timer.hpp
  ../../../../code/thirdparty/asio/asio/basic_io_object.hpp
  ../../../../code/thirdparty/asio/asio/basic_raw_socket.hpp
  ../../../../code/thirdparty/asio/asio/basic_seq_packet_socket.hpp
  ../../../../code/thirdparty/asio/asio/basic_serial_port.hpp
  ../../../../code/thirdparty/asio/asio/basic_signal_set.hpp
  ../../../../code/thirdparty/asio/asio/basic_socket.hpp
  ../../../../code/thirdparty/asio/asio/basic_socket_acceptor.hpp
  ../../../../code/thirdparty/asio/asio/basic_socket_iostream.hpp
  ../../../../code/thirdparty/asio/asio/basic_socket_streambuf.hpp
  ../../../../code/thirdparty/asio/asio/basic_stream_socket.hpp
  ../../../../code/thirdparty/asio/asio/basic_streambuf.hpp
  ../../../../code/thirdparty/asio/asio/basic_streambuf_fwd.hpp
  ../../../../code/thirdparty/asio/asio/basic_waitable_timer.hpp
  ../../../../code/thirdparty/asio/asio/buffer.hpp
  ../../../../code/thirdparty/asio/asio/buffered_read_stream.hpp
  ../../../../code/thirdparty/asio/asio/buffered_read_stream_fwd.hpp
  ../../../../code/thirdparty/asio/asio/buffered_stream.hpp
  ../../../../code/thirdparty/asio/asio/buffered_stream_fwd.hpp
  ../../../../code/thirdparty/asio/asio/buffered_write_stream.hpp
  ../../../../code/thirdparty/asio/asio/buffered_write_stream_fwd.hpp
  ../../../../code/thirdparty/asio/asio/buffers_iterator.hpp
  ../../../../code/thirdparty/asio/asio/completion_condition.hpp
  ../../../../code/thirdparty/asio/asio/connect.hpp
  ../../../../code/thirdparty/asio/asio/coroutine.hpp
  ../../../../code/thirdparty/asio/asio/datagram_socket_service.hpp
  ../../../../code/thirdparty/asio/asio/deadline_timer.hpp
  ../../../../code/thirdparty/asio/asio/deadline_timer_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/addressof.hpp
  ../../../../code/thirdparty/asio/asio/detail/array.hpp
  ../../../../code/thirdparty/asio/asio/detail/array_fwd.hpp
  ../../../../code/thirdparty/asio/asio/detail/assert.hpp
  ../../../../code/thirdparty/asio/asio/detail/atomic_count.hpp
  ../../../../code/thirdparty/asio/asio/detail/base_from_completion_cond.hpp
  ../../../../code/thirdparty/asio/asio/detail/bind_handler.hpp
  ../../../../code/thirdparty/asio/asio/detail/buffer_resize_guard.hpp
  ../../../../code/thirdparty/asio/asio/detail/buffer_sequence_adapter.hpp
  ../../../../code/thirdparty/asio/asio/detail/buffered_stream_storage.hpp
  ../../../../code/thirdparty/asio/asio/detail/call_stack.hpp
  ../../../../code/thirdparty/asio/asio/detail/chrono_time_traits.hpp
  ../../../../code/thirdparty/asio/asio/detail/completion_handler.hpp
  ../../../../code/thirdparty/asio/asio/detail/config.hpp
  ../../../../code/thirdparty/asio/asio/detail/consuming_buffers.hpp
  ../../../../code/thirdparty/asio/asio/detail/cstdint.hpp
  ../../../../code/thirdparty/asio/asio/detail/date_time_fwd.hpp
  ../../../../code/thirdparty/asio/asio/detail/deadline_timer_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/dependent_type.hpp
  ../../../../code/thirdparty/asio/asio/detail/descriptor_ops.hpp
  ../../../../code/thirdparty/asio/asio/detail/descriptor_read_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/descriptor_write_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/dev_poll_reactor.hpp
  ../../../../code/thirdparty/asio/asio/detail/epoll_reactor.hpp
  ../../../../code/thirdparty/asio/asio/detail/event.hpp
  ../../../../code/thirdparty/asio/asio/detail/eventfd_select_interrupter.hpp
  ../../../../code/thirdparty/asio/asio/detail/fd_set_adapter.hpp
  ../../../../code/thirdparty/asio/asio/detail/fenced_block.hpp
  ../../../../code/thirdparty/asio/asio/detail/function.hpp
  ../../../../code/thirdparty/asio/asio/detail/gcc_arm_fenced_block.hpp
  ../../../../code/thirdparty/asio/asio/detail/gcc_hppa_fenced_block.hpp
  ../../../../code/thirdparty/asio/asio/detail/gcc_sync_fenced_block.hpp
  ../../../../code/thirdparty/asio/asio/detail/gcc_x86_fenced_block.hpp
  ../../../../code/thirdparty/asio/asio/detail/handler_alloc_helpers.hpp
  ../../../../code/thirdparty/asio/asio/detail/handler_cont_helpers.hpp
  ../../../../code/thirdparty/asio/asio/detail/handler_invoke_helpers.hpp
  ../../../../code/thirdparty/asio/asio/detail/handler_tracking.hpp
  ../../../../code/thirdparty/asio/asio/detail/handler_type_requirements.hpp
  ../../../../code/thirdparty/asio/asio/detail/hash_map.hpp
  ../../../../code/thirdparty/asio/asio/detail/impl/buffer_sequence_adapter.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/descriptor_ops.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/dev_poll_reactor.hpp
  ../../../../code/thirdparty/asio/asio/detail/impl/dev_poll_reactor.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/epoll_reactor.hpp
  ../../../../code/thirdparty/asio/asio/detail/impl/epoll_reactor.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/eventfd_select_interrupter.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/handler_tracking.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/kqueue_reactor.hpp
  ../../../../code/thirdparty/asio/asio/detail/impl/kqueue_reactor.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/pipe_select_interrupter.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/posix_event.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/posix_mutex.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/posix_thread.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/posix_tss_ptr.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/reactive_descriptor_service.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/reactive_serial_port_service.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/reactive_socket_service_base.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/resolver_service_base.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/select_reactor.hpp
  ../../../../code/thirdparty/asio/asio/detail/impl/select_reactor.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/service_registry.hpp
  ../../../../code/thirdparty/asio/asio/detail/impl/service_registry.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/signal_set_service.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/socket_ops.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/socket_select_interrupter.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/strand_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/impl/strand_service.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/task_io_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/impl/task_io_service.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/throw_error.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/timer_queue_ptime.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/timer_queue_set.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/win_event.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/win_iocp_handle_service.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/win_iocp_io_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/impl/win_iocp_io_service.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/win_iocp_serial_port_service.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/win_iocp_socket_service_base.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/win_mutex.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/win_object_handle_service.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/win_static_mutex.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/win_thread.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/win_tss_ptr.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/winrt_ssocket_service_base.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/winrt_timer_scheduler.hpp
  ../../../../code/thirdparty/asio/asio/detail/impl/winrt_timer_scheduler.ipp
  ../../../../code/thirdparty/asio/asio/detail/impl/winsock_init.ipp
  ../../../../code/thirdparty/asio/asio/detail/io_control.hpp
  ../../../../code/thirdparty/asio/asio/detail/keyword_tss_ptr.hpp
  ../../../../code/thirdparty/asio/asio/detail/kqueue_reactor.hpp
  ../../../../code/thirdparty/asio/asio/detail/limits.hpp
  ../../../../code/thirdparty/asio/asio/detail/local_free_on_block_exit.hpp
  ../../../../code/thirdparty/asio/asio/detail/macos_fenced_block.hpp
  ../../../../code/thirdparty/asio/asio/detail/mutex.hpp
  ../../../../code/thirdparty/asio/asio/detail/noncopyable.hpp
  ../../../../code/thirdparty/asio/asio/detail/null_event.hpp
  ../../../../code/thirdparty/asio/asio/detail/null_fenced_block.hpp
  ../../../../code/thirdparty/asio/asio/detail/null_mutex.hpp
  ../../../../code/thirdparty/asio/asio/detail/null_reactor.hpp
  ../../../../code/thirdparty/asio/asio/detail/null_signal_blocker.hpp
  ../../../../code/thirdparty/asio/asio/detail/null_socket_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/null_static_mutex.hpp
  ../../../../code/thirdparty/asio/asio/detail/null_thread.hpp
  ../../../../code/thirdparty/asio/asio/detail/null_tss_ptr.hpp
  ../../../../code/thirdparty/asio/asio/detail/object_pool.hpp
  ../../../../code/thirdparty/asio/asio/detail/old_win_sdk_compat.hpp
  ../../../../code/thirdparty/asio/asio/detail/op_queue.hpp
  ../../../../code/thirdparty/asio/asio/detail/operation.hpp
  ../../../../code/thirdparty/asio/asio/detail/pipe_select_interrupter.hpp
  ../../../../code/thirdparty/asio/asio/detail/pop_options.hpp
  ../../../../code/thirdparty/asio/asio/detail/posix_event.hpp
  ../../../../code/thirdparty/asio/asio/detail/posix_fd_set_adapter.hpp
  ../../../../code/thirdparty/asio/asio/detail/posix_mutex.hpp
  ../../../../code/thirdparty/asio/asio/detail/posix_signal_blocker.hpp
  ../../../../code/thirdparty/asio/asio/detail/posix_static_mutex.hpp
  ../../../../code/thirdparty/asio/asio/detail/posix_thread.hpp
  ../../../../code/thirdparty/asio/asio/detail/posix_tss_ptr.hpp
  ../../../../code/thirdparty/asio/asio/detail/push_options.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_descriptor_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_null_buffers_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_serial_port_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_socket_accept_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_socket_connect_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_socket_recv_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_socket_recvfrom_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_socket_recvmsg_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_socket_send_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_socket_sendto_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_socket_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactive_socket_service_base.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactor.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactor_fwd.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactor_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/reactor_op_queue.hpp
  ../../../../code/thirdparty/asio/asio/detail/regex_fwd.hpp
  ../../../../code/thirdparty/asio/asio/detail/resolve_endpoint_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/resolve_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/resolver_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/resolver_service_base.hpp
  ../../../../code/thirdparty/asio/asio/detail/scoped_lock.hpp
  ../../../../code/thirdparty/asio/asio/detail/scoped_ptr.hpp
  ../../../../code/thirdparty/asio/asio/detail/select_interrupter.hpp
  ../../../../code/thirdparty/asio/asio/detail/select_reactor.hpp
  ../../../../code/thirdparty/asio/asio/detail/service_registry.hpp
  ../../../../code/thirdparty/asio/asio/detail/shared_ptr.hpp
  ../../../../code/thirdparty/asio/asio/detail/signal_blocker.hpp
  ../../../../code/thirdparty/asio/asio/detail/signal_handler.hpp
  ../../../../code/thirdparty/asio/asio/detail/signal_init.hpp
  ../../../../code/thirdparty/asio/asio/detail/signal_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/signal_set_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/socket_holder.hpp
  ../../../../code/thirdparty/asio/asio/detail/socket_ops.hpp
  ../../../../code/thirdparty/asio/asio/detail/socket_option.hpp
  ../../../../code/thirdparty/asio/asio/detail/socket_select_interrupter.hpp
  ../../../../code/thirdparty/asio/asio/detail/socket_types.hpp
  ../../../../code/thirdparty/asio/asio/detail/solaris_fenced_block.hpp
  ../../../../code/thirdparty/asio/asio/detail/static_mutex.hpp
  ../../../../code/thirdparty/asio/asio/detail/std_event.hpp
  ../../../../code/thirdparty/asio/asio/detail/std_mutex.hpp
  ../../../../code/thirdparty/asio/asio/detail/std_static_mutex.hpp
  ../../../../code/thirdparty/asio/asio/detail/std_thread.hpp
  ../../../../code/thirdparty/asio/asio/detail/strand_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/task_io_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/task_io_service_operation.hpp
  ../../../../code/thirdparty/asio/asio/detail/task_io_service_thread_info.hpp
  ../../../../code/thirdparty/asio/asio/detail/thread.hpp
  ../../../../code/thirdparty/asio/asio/detail/thread_info_base.hpp
  ../../../../code/thirdparty/asio/asio/detail/throw_error.hpp
  ../../../../code/thirdparty/asio/asio/detail/throw_exception.hpp
  ../../../../code/thirdparty/asio/asio/detail/timer_queue.hpp
  ../../../../code/thirdparty/asio/asio/detail/timer_queue_base.hpp
  ../../../../code/thirdparty/asio/asio/detail/timer_queue_ptime.hpp
  ../../../../code/thirdparty/asio/asio/detail/timer_queue_set.hpp
  ../../../../code/thirdparty/asio/asio/detail/timer_scheduler.hpp
  ../../../../code/thirdparty/asio/asio/detail/timer_scheduler_fwd.hpp
  ../../../../code/thirdparty/asio/asio/detail/tss_ptr.hpp
  ../../../../code/thirdparty/asio/asio/detail/type_traits.hpp
  ../../../../code/thirdparty/asio/asio/detail/variadic_templates.hpp
  ../../../../code/thirdparty/asio/asio/detail/wait_handler.hpp
  ../../../../code/thirdparty/asio/asio/detail/wait_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/weak_ptr.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_event.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_fd_set_adapter.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_fenced_block.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_handle_read_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_handle_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_handle_write_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_io_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_null_buffers_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_operation.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_overlapped_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_overlapped_ptr.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_serial_port_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_socket_accept_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_socket_connect_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_socket_recv_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_socket_recvfrom_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_socket_recvmsg_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_socket_send_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_socket_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_socket_service_base.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_iocp_thread_info.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_mutex.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_object_handle_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_static_mutex.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_thread.hpp
  ../../../../code/thirdparty/asio/asio/detail/win_tss_ptr.hpp
  ../../../../code/thirdparty/asio/asio/detail/wince_thread.hpp
  ../../../../code/thirdparty/asio/asio/detail/winrt_async_manager.hpp
  ../../../../code/thirdparty/asio/asio/detail/winrt_async_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/winrt_resolve_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/winrt_resolver_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/winrt_socket_connect_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/winrt_socket_recv_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/winrt_socket_send_op.hpp
  ../../../../code/thirdparty/asio/asio/detail/winrt_ssocket_service.hpp
  ../../../../code/thirdparty/asio/asio/detail/winrt_ssocket_service_base.hpp
  ../../../../code/thirdparty/asio/asio/detail/winrt_timer_scheduler.hpp
  ../../../../code/thirdparty/asio/asio/detail/winrt_utils.hpp
  ../../../../code/thirdparty/asio/asio/detail/winsock_init.hpp
  ../../../../code/thirdparty/asio/asio/detail/wrapped_handler.hpp
  ../../../../code/thirdparty/asio/asio/error.hpp
  ../../../../code/thirdparty/asio/asio/error_code.hpp
  ../../../../code/thirdparty/asio/asio/generic/basic_endpoint.hpp
  ../../../../code/thirdparty/asio/asio/generic/datagram_protocol.hpp
  ../../../../code/thirdparty/asio/asio/generic/detail/endpoint.hpp
  ../../../../code/thirdparty/asio/asio/generic/detail/impl/endpoint.ipp
  ../../../../code/thirdparty/asio/asio/generic/raw_protocol.hpp
  ../../../../code/thirdparty/asio/asio/generic/seq_packet_protocol.hpp
  ../../../../code/thirdparty/asio/asio/generic/stream_protocol.hpp
  ../../../../code/thirdparty/asio/asio/handler_alloc_hook.hpp
  ../../../../code/thirdparty/asio/asio/handler_continuation_hook.hpp
  ../../../../code/thirdparty/asio/asio/handler_invoke_hook.hpp
  ../../../../code/thirdparty/asio/asio/handler_type.hpp
  ../../../../code/thirdparty/asio/asio/high_resolution_timer.hpp
  ../../../../code/thirdparty/asio/asio/impl/buffered_read_stream.hpp
  ../../../../code/thirdparty/asio/asio/impl/buffered_write_stream.hpp
  ../../../../code/thirdparty/asio/asio/impl/connect.hpp
  ../../../../code/thirdparty/asio/asio/impl/error.ipp
  ../../../../code/thirdparty/asio/asio/impl/error_code.ipp
  ../../../../code/thirdparty/asio/asio/impl/handler_alloc_hook.ipp
  ../../../../code/thirdparty/asio/asio/impl/io_service.hpp
  ../../../../code/thirdparty/asio/asio/impl/io_service.ipp
  ../../../../code/thirdparty/asio/asio/impl/read.hpp
  ../../../../code/thirdparty/asio/asio/impl/read_at.hpp
  ../../../../code/thirdparty/asio/asio/impl/read_until.hpp
  ../../../../code/thirdparty/asio/asio/impl/serial_port_base.hpp
  ../../../../code/thirdparty/asio/asio/impl/serial_port_base.ipp
  ../../../../code/thirdparty/asio/asio/impl/spawn.hpp
  ../../../../code/thirdparty/asio/asio/impl/src.hpp
  ../../../../code/thirdparty/asio/asio/impl/use_future.hpp
  ../../../../code/thirdparty/asio/asio/impl/write.hpp
  ../../../../code/thirdparty/asio/asio/impl/write_at.hpp
  ../../../../code/thirdparty/asio/asio/io_service.hpp
  ../../../../code/thirdparty/asio/asio/ip/address.hpp
  ../../../../code/thirdparty/asio/asio/ip/address_v4.hpp
  ../../../../code/thirdparty/asio/asio/ip/address_v6.hpp
  ../../../../code/thirdparty/asio/asio/ip/basic_endpoint.hpp
  ../../../../code/thirdparty/asio/asio/ip/basic_resolver.hpp
  ../../../../code/thirdparty/asio/asio/ip/basic_resolver_entry.hpp
  ../../../../code/thirdparty/asio/asio/ip/basic_resolver_iterator.hpp
  ../../../../code/thirdparty/asio/asio/ip/basic_resolver_query.hpp
  ../../../../code/thirdparty/asio/asio/ip/detail/endpoint.hpp
  ../../../../code/thirdparty/asio/asio/ip/detail/impl/endpoint.ipp
  ../../../../code/thirdparty/asio/asio/ip/detail/socket_option.hpp
  ../../../../code/thirdparty/asio/asio/ip/host_name.hpp
  ../../../../code/thirdparty/asio/asio/ip/icmp.hpp
  ../../../../code/thirdparty/asio/asio/ip/impl/address.hpp
  ../../../../code/thirdparty/asio/asio/ip/impl/address.ipp
  ../../../../code/thirdparty/asio/asio/ip/impl/address_v4.hpp
  ../../../../code/thirdparty/asio/asio/ip/impl/address_v4.ipp
  ../../../../code/thirdparty/asio/asio/ip/impl/address_v6.hpp
  ../../../../code/thirdparty/asio/asio/ip/impl/address_v6.ipp
  ../../../../code/thirdparty/asio/asio/ip/impl/basic_endpoint.hpp
  ../../../../code/thirdparty/asio/asio/ip/impl/host_name.ipp
  ../../../../code/thirdparty/asio/asio/ip/multicast.hpp
  ../../../../code/thirdparty/asio/asio/ip/resolver_query_base.hpp
  ../../../../code/thirdparty/asio/asio/ip/resolver_service.hpp
  ../../../../code/thirdparty/asio/asio/ip/tcp.hpp
  ../../../../code/thirdparty/asio/asio/ip/udp.hpp
  ../../../../code/thirdparty/asio/asio/ip/unicast.hpp
  ../../../../code/thirdparty/asio/asio/ip/v6_only.hpp
  ../../../../code/thirdparty/asio/asio/is_read_buffered.hpp
  ../../../../code/thirdparty/asio/asio/is_write_buffered.hpp
  ../../../../code/thirdparty/asio/asio/local/basic_endpoint.hpp
  ../../../../code/thirdparty/asio/asio/local/connect_pair.hpp
  ../../../../code/thirdparty/asio/asio/local/datagram_protocol.hpp
  ../../../../code/thirdparty/asio/asio/local/detail/endpoint.hpp
  ../../../../code/thirdparty/asio/asio/local/detail/impl/endpoint.ipp
  ../../../../code/thirdparty/asio/asio/local/stream_protocol.hpp
  ../../../../code/thirdparty/asio/asio/placeholders.hpp
  ../../../../code/thirdparty/asio/asio/posix/basic_descriptor.hpp
  ../../../../code/thirdparty/asio/asio/posix/basic_stream_descriptor.hpp
  ../../../../code/thirdparty/asio/asio/posix/descriptor_base.hpp
  ../../../../code/thirdparty/asio/asio/posix/stream_descriptor.hpp
  ../../../../code/thirdparty/asio/asio/posix/stream_descriptor_service.hpp
  ../../../../code/thirdparty/asio/asio/raw_socket_service.hpp
  ../../../../code/thirdparty/asio/asio/read.hpp
  ../../../../code/thirdparty/asio/asio/read_at.hpp
  ../../../../code/thirdparty/asio/asio/read_until.hpp
  ../../../../code/thirdparty/asio/asio/seq_packet_socket_service.hpp
  ../../../../code/thirdparty/asio/asio/serial_port.hpp
  ../../../../code/thirdparty/asio/asio/serial_port_base.hpp
  ../../../../code/thirdparty/asio/asio/serial_port_service.hpp
  ../../../../code/thirdparty/asio/asio/signal_set.hpp
  ../../../../code/thirdparty/asio/asio/signal_set_service.hpp
  ../../../../code/thirdparty/asio/asio/socket_acceptor_service.hpp
  ../../../../code/thirdparty/asio/asio/socket_base.hpp
  ../../../../code/thirdparty/asio/asio/spawn.hpp
  ../../../../code/thirdparty/asio/asio/ssl/basic_context.hpp
  ../../../../code/thirdparty/asio/asio/ssl/context.hpp
  ../../../../code/thirdparty/asio/asio/ssl/context_base.hpp
  ../../../../code/thirdparty/asio/asio/ssl/context_service.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/buffered_handshake_op.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/engine.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/handshake_op.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/impl/engine.ipp
  ../../../../code/thirdparty/asio/asio/ssl/detail/impl/openssl_init.ipp
  ../../../../code/thirdparty/asio/asio/ssl/detail/io.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/openssl_init.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/openssl_types.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/password_callback.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/read_op.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/shutdown_op.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/stream_core.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/verify_callback.hpp
  ../../../../code/thirdparty/asio/asio/ssl/detail/write_op.hpp
  ../../../../code/thirdparty/asio/asio/ssl/error.hpp
  ../../../../code/thirdparty/asio/asio/ssl/impl/context.hpp
  ../../../../code/thirdparty/asio/asio/ssl/impl/context.ipp
  ../../../../code/thirdparty/asio/asio/ssl/impl/error.ipp
  ../../../../code/thirdparty/asio/asio/ssl/impl/rfc2818_verification.ipp
  ../../../../code/thirdparty/asio/asio/ssl/impl/src.hpp
  ../../../../code/thirdparty/asio/asio/ssl/old/basic_context.hpp
  ../../../../code/thirdparty/asio/asio/ssl/old/context_service.hpp
  ../../../../code/thirdparty/asio/asio/ssl/old/detail/openssl_context_service.hpp
  ../../../../code/thirdparty/asio/asio/ssl/old/detail/openssl_operation.hpp
  ../../../../code/thirdparty/asio/asio/ssl/old/detail/openssl_stream_service.hpp
  ../../../../code/thirdparty/asio/asio/ssl/old/stream.hpp
  ../../../../code/thirdparty/asio/asio/ssl/old/stream_service.hpp
  ../../../../code/thirdparty/asio/asio/ssl/rfc2818_verification.hpp
  ../../../../code/thirdparty/asio/asio/ssl/stream.hpp
  ../../../../code/thirdparty/asio/asio/ssl/stream_base.hpp
  ../../../../code/thirdparty/asio/asio/ssl/stream_service.hpp
  ../../../../code/thirdparty/asio/asio/ssl/verify_context.hpp
  ../../../../code/thirdparty/asio/asio/ssl/verify_mode.hpp
  ../../../../code/thirdparty/asio/asio/ssl.hpp
  ../../../../code/thirdparty/asio/asio/steady_timer.hpp
  ../../../../code/thirdparty/asio/asio/strand.hpp
  ../../../../code/thirdparty/asio/asio/stream_socket_service.hpp
  ../../../../code/thirdparty/asio/asio/streambuf.hpp
  ../../../../code/thirdparty/asio/asio/system_error.hpp
  ../../../../code/thirdparty/asio/asio/system_timer.hpp
  ../../../../code/thirdparty/asio/asio/thread.hpp
  ../../../../code/thirdparty/asio/asio/time_traits.hpp
  ../../../../code/thirdparty/asio/asio/unyield.hpp
  ../../../../code/thirdparty/asio/asio/use_future.hpp
  ../../../../code/thirdparty/asio/asio/version.hpp
  ../../../../code/thirdparty/asio/asio/wait_traits.hpp
  ../../../../code/thirdparty/asio/asio/waitable_timer_service.hpp
  ../../../../code/thirdparty/asio/asio/windows/basic_handle.hpp
  ../../../../code/thirdparty/asio/asio/windows/basic_object_handle.hpp
  ../../../../code/thirdparty/asio/asio/windows/basic_random_access_handle.hpp
  ../../../../code/thirdparty/asio/asio/windows/basic_stream_handle.hpp
  ../../../../code/thirdparty/asio/asio/windows/object_handle.hpp
  ../../../../code/thirdparty/asio/asio/windows/object_handle_service.hpp
  ../../../../code/thirdparty/asio/asio/windows/overlapped_ptr.hpp
  ../../../../code/thirdparty/asio/asio/windows/random_access_handle.hpp
  ../../../../code/thirdparty/asio/asio/windows/random_access_handle_service.hpp
  ../../../../code/thirdparty/asio/asio/windows/stream_handle.hpp
  ../../../../code/thirdparty/asio/asio/windows/stream_handle_service.hpp
  ../../../../code/thirdparty/asio/asio/write.hpp
  ../../../../code/thirdparty/asio/asio/write_at.hpp
  ../../../../code/thirdparty/asio/asio/yield.hpp
  ../../../../code/thirdparty/asio/asio.hpp
)
include_directories(../../../../code/thirdparty)
include_directories(../../../../code/thirdparty/asio)
include_directories(../../../../code)
add_definitions(-DASIO_STANDALONE)
add_definitions(-DDEBUG)
add_definitions(-DFTS_WINDOWS)
add_definitions(-D_WIN32_WINNT=0x0601)
add_library(net STATIC ${source_list})
